fixed spacing issue with quantity counter

--- a/authenticgrace.css
+++ b/authenticgrace.css
@@ -228,29 +228,20 @@ ul.sub-header li a:hover {
     color: #FFE1D1;
     text-decoration: none;
 }
-/* .counter {
-    
-    display: inline-block;
-} */
+.sc-lbl {
+    margin-top: 20px;
+}
+
 /*form-flex button */
 .button {
     cursor: pointer;
     text-align: center;
     float: left;
     margin-top: 10px;
-    
-    
-    /* display: inline; */
-    /* widt200100%; */
 }
 
 /* Value-button */
 form {
-    display: inline;
-    width: 200px;
-   
-    text-align: left;
-    padding-top: 10px;
     margin-top: 10px;
   }
 
@@ -264,6 +255,7 @@ form {
     vertical-align: middle;
     padding: 11px 0;
     background: #eee;
+    
   }
   
   .value-button:hover {
